--- a/PasswordChecker.html
+++ b/PasswordChecker.html
@@ -33,43 +33,51 @@
     </button>
 </nav>
 <div class="mw-100 container">
-    <div class="row justify-content-center">
-        <div class="input-group col-md-8" style="padding-bottom: 2rem;padding-top:2rem;" >
-            <div class="input-group-prepend shadow">
-                <span class="input-group-text"><i class="material-icons" id="secIcon" style="color:red;">lock_open</i></span>
+    <div class="row justify-content-center" style="padding-bottom: 2rem;padding-top:2rem;">
+        <div class="col-lg-8">
+            <div class="shadow card bg-light">
+                <div class="row justify-content-center">
+                    <div class="col-sm-11">
+                        <div class="input-group" style="padding-bottom: 2rem;padding-top:2rem;" >
+                            <div class="input-group-prepend">
+                                <span class="input-group-text"><i class="material-icons" id="secIcon" style="color:red;">lock_open</i></span>
+                            </div>
+                            <input oninput="checkPassword()" type="password" id="password" class="form-control" placeholder="Password">
+                        </div>
+                    </div>
+
+                </div>
+                <div class="row justify-content-center">
+                    <div class="col-sm-11" style="padding-bottom: 1rem;">
+                        <table class="table table-striped table-bordered">
+                            <tbody>
+                            <tr>
+                                <td><p id="check1" style="color:red;"><i alt="check Icon" class="material-icons" id="checkIcon1" style="color:red;">
+                                    clear</i>At Least 12 Characters Long</p></td>
+                                <td><p id="check2" style="color:red;"><i alt="check Icon" class="material-icons" id="checkIcon2" style="color:red;">
+                                    clear</i>Contains Numbers</p></td>
+                            </tr>
+                            <tr>
+                                <td><p id="check3" style="color:red;"><i alt="check Icon" class="material-icons" id="checkIcon3" style="color:red;">clear</i>
+                                    Contains Symbols</p></td>
+                                <td><p id="check4" style="color:red;"><i alt="check Icon" class="material-icons" id="checkIcon4" style="color:red;">
+                                    clear</i>Contains Upper Case Letters</p></td>
+                            </tr>
+                            <tr>
+                                <td><p id="check5" style="color:red;"><i alt="check Icon" class="material-icons" id="checkIcon5" style="color:red;">
+                                    clear</i>Contains no common words</p></td>
+                                <td><p id="check6" style="color:red;"><i alt="check Icon" class="material-icons" id="checkIcon6" style="color:red;">
+                                    clear</i>Is not a common password</p></td>
+                            </tr>
+                            </tbody>
+                        </table>
+                    </div>
+                </div>
             </div>
-            <input oninput="checkPassword()" type="password" id="password" class="form-control shadow" placeholder="Password">
-        </div>
-    </div>
-    <div class="row justify-content-center">
-        <div class="col-md-8">
-            <table class="table table-striped table-bordered shadow">
-                <tbody>
-                <tr>
-                    <td><p id="check1" style="color:red;"><i alt="check Icon" class="material-icons" id="checkIcon1" style="color:red;">
-                        clear</i>At Least 12 Characters Long</p></td>
-                    <td><p id="check2" style="color:red;"><i alt="check Icon" class="material-icons" id="checkIcon2" style="color:red;">
-                        clear</i>Contains Numbers</p></td>
-                </tr>
-                <tr>
-                    <td><p id="check3" style="color:red;"><i alt="check Icon" class="material-icons" id="checkIcon3" style="color:red;">clear</i>
-                        Contains Symbols</p></td>
-                    <td><p id="check4" style="color:red;"><i alt="check Icon" class="material-icons" id="checkIcon4" style="color:red;">
-                        clear</i>Contains Upper Case Letters</p></td>
-                </tr>
-                <tr>
-                    <td><p id="check5" style="color:red;"><i alt="check Icon" class="material-icons" id="checkIcon5" style="color:red;">
-                        clear</i>Contains no common words</p></td>
-                    <td><p id="check6" style="color:red;"><i alt="check Icon" class="material-icons" id="checkIcon6" style="color:red;">
-                        clear</i>Is not a common password</p></td>
-                </tr>
-                </tbody>
-            </table>
         </div>
     </div>
 </div>
 <script src="https://cdnjs.cloudflare.com/ajax/libs/popper.js/1.14.7/umd/popper.min.js" integrity="sha384-UO2eT0CpHqdSJQ6hJty5KVphtPhzWj9WO1clHTMGa3JDZwrnQq4sF86dIHNDz0W1" crossorigin="anonymous"></script>
 <script src="https://stackpath.bootstrapcdn.com/bootstrap/4.3.1/js/bootstrap.min.js" integrity="sha384-JjSmVgyd0p3pXB1rRibZUAYoIIy6OrQ6VrjIEaFf/nJGzIxFDsf4x0xIM+B07jRM" crossorigin="anonymous"></script>
-
 </body>
 </html>
